--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "blockly",
-  "version": "11.1.1",
+  "name": "blockly-tradais",
+  "version": "0.1.1",
   "description": "Blockly is a library for building visual programming editors.",
   "keywords": [
     "blockly"
