made it compatable as few lines of code needed to be changed for blockly-tradais mostly folder path has to be changed and had to diable in release task the publish login to google as its not required for our use-case

--- a/appengine/app.yaml
+++ b/appengine/app.yaml
@@ -3,7 +3,7 @@ runtime: python312
 handlers:
 # Redirect obsolete URLs.
 # Blockly files moved from /blockly to /static on 5 Dec 2012.
-- url: /blockly/.*
+- url: /blockly-tradais/.*
   static_files: redirect.html
   upload: redirect.html
 # Code, Maze and Turtle moved from demos on 29 Dec 2012.
